fix(mobile/floating-btn): Adjust GPThemes floating button position
- Fix the floating button overlapping the user account image in the sticky header on smaller devices on the GPTs Store page

Changes summary:
- Adjusted the position of the floating button in the sticky header:
  - Ensured the button does not overlap the user account image on smaller devices, improving the overall layout and user experience.

--- a/src/sass/gpthemes/_gpth-floating-btn.scss
+++ b/src/sass/gpthemes/_gpth-floating-btn.scss
@@ -394,3 +394,19 @@ html.light {
 		color: var(--c-txt);
 	}
 }
+
+
+
+body:has(.h-full.overflow-y-auto .sticky img[alt='User']) {
+
+	@include dev(tab-land) {
+		// box-shadow: inset 0 0 0 10px red !important;
+
+		.gpth {
+			&__floating {
+				--top: calc(var(--h-header) * 2);
+				// --top: calc(var(--h-header)/4);
+			}
+		}
+	}
+}
